[package]
name = "keyrock-demo"
version = "0.1.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2018"
build = "build/build.rs"

[[bin]]
name = "aggregator-server"
path = "src/server.rs"

[[bin]]
name = "aggregator-client"
path = "src/client.rs"

[dependencies]
failure = "0.1"
futures = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "sync", "stream"] }
tonic = "0.1"

[build-dependencies]
tonic-build = "0.1"
