[package]
name = "keyrock-demo"
version = "0.1.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2018"
build = "build/build.rs"

[[bin]]
name = "aggregator-server"
path = "src/server.rs"

[[bin]]
name = "aggregator-client"
path = "src/client.rs"

[dependencies]
async-trait = "0.1"
async-stream = "0.2"
failure = "0.1"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
prost = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["io-util", "macros", "sync", "stream", "time"] }
tokio-tungstenite = { version = "0.10", features = ["tls"] }
tonic = "0.1"
tungstenite = "0.10"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = "0.1"
